[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHandler.gd" type="Script" id=3]
[ext_resource path="res://Particle1.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/fondo.png" type="Texture" id=5]
[ext_resource path="res://Asteroide.tscn" type="PackedScene" id=6]
[ext_resource path="res://RutaAsteroide.gd" type="Script" id=7]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Valor_obtenido.tscn" type="PackedScene" id=9]
[ext_resource path="res://images/fondo_estrellas.png" type="Texture" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1000.59, 34.1845, 0, 0, 0, 0, 996.594, 760.185, 0, 0, 0, 0, -25.4059, 764.185, 0, 0, 0, 0, -21.4059, 36.1845, 0, 0, 0, 0, 1000.59, 34.1845 )
}

[sub_resource type="CanvasItemMaterial" id=2]

[node name="GameHandler" type="Node"]
script = ExtResource( 3 )
Bullet = ExtResource( 2 )
Particle = ExtResource( 4 )
Asteroid = ExtResource( 6 )
label_valor = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 489.994, 395.559 )

[node name="TimerLapseParticle" type="Timer" parent="."]
wait_time = 0.01

[node name="TimerSpawnAsteroide" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerReStart" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="RutaAsteroide" type="Path2D" parent="."]
curve = SubResource( 1 )
script = ExtResource( 7 )

[node name="SpawnAsteroide" type="PathFollow2D" parent="RutaAsteroide"]
position = Vector2( 1000.59, 34.1845 )
rotation = 1.57632

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="capa1" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_mirroring = Vector2( 1024, 720 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/capa1"]
material = SubResource( 2 )
position = Vector2( 1.8877, 0 )
z_index = -3
texture = ExtResource( 5 )
centered = false

[node name="capa2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1024, 720 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/capa2"]
texture = ExtResource( 10 )
centered = false

[node name="HUD" parent="." instance=ExtResource( 8 )]

[connection signal="fire" from="Player" to="." method="_on_Player_fire"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="timeout" from="TimerLapseParticle" to="." method="_on_TimerLapseParticle_timeout"]
[connection signal="timeout" from="TimerSpawnAsteroide" to="." method="_on_TimerSpawnAsteroide_timeout"]
[connection signal="timeout" from="TimerReStart" to="." method="_on_TimerReStart_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
